RESOLVED FIXED188443
REGRESSION (r232083): WKWebView loses first-party cookies on iOS
https://bugs.webkit.org/show_bug.cgi?id=188443
Summary REGRESSION (r232083): WKWebView loses first-party cookies on iOS
Sihui Liu
Reported 2018-08-09 10:39:03 PDT
For apps using shared cookie storage, cookies cannot be read from or written to persistent storage.
Attachments
Patch (9.75 KB, patch)
2018-08-09 10:48 PDT, Sihui Liu
no flags
Patch (9.75 KB, patch)
2018-08-09 10:49 PDT, Sihui Liu
no flags
Sihui Liu
Comment 1 2018-08-09 10:43:41 PDT
Sihui Liu
Comment 2 2018-08-09 10:48:11 PDT
Chris Dumez
Comment 3 2018-08-09 10:49:47 PDT
Comment on attachment 346844 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=346844&action=review > Tools/TestWebKitAPI/Tests/WebKitCocoa/WKHTTPCookieStore.mm:480 > +#if (PLATFORM(MAC) How does that even build? :)
Sihui Liu
Comment 4 2018-08-09 10:49:57 PDT
Chris Dumez
Comment 5 2018-08-09 10:51:09 PDT
Also, please make sure locally that it fixes the issue from the radar.
Chris Dumez
Comment 6 2018-08-09 10:52:42 PDT
Comment on attachment 346845 [details] Patch r=me assuming the bots are happy and you confirm it fixes the bug.
Sihui Liu
Comment 7 2018-08-09 11:02:29 PDT
(In reply to Chris Dumez from comment #6) > Comment on attachment 346845 [details] > Patch > > r=me assuming the bots are happy and you confirm it fixes the bug. Verified. Waiting for all bots to be happy.
Chris Dumez
Comment 8 2018-08-09 11:48:18 PDT
Comment on attachment 346845 [details] Patch Clearing flags on attachment: 346845 Committed r234730: <https://trac.webkit.org/changeset/234730>
Chris Dumez
Comment 9 2018-08-09 11:48:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.